# hermes-brain

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  README.md  __init__.py  _compat.py  brain_setup.py  cli.py  config.py  llm.py  mcp_server.py  plugin.yaml  provider.py  pyproject.toml  tools.py
bootstrap/: __init__.py  daemon_import.py  memory_md.py  state_db.py
capture/: extract.py  salience.py  symbols.py  turns.py
docker/: Dockerfile  Dockerfile.full  Dockerfile.hermes  Dockerfile.hermes-mock  README.md  hermes_provider_smoke.py  hermes_turn_driver.py  mock_llm.py  smoke_imports.py
docker/adversarial/: Dockerfile.live  README.md  coexistence_check.py  crash_dream.py  driver.py  golden.py  mcp_client.py  mock_llm.py  race_dream.py  run-suite.sh  stage.sh
docs/: integration-runbook.md
docs/design/: critique.md  integration.md  learning-system.md  memory-engine.md  substrate-spike.md
docs/research/: daem0n-graph-temporal.md  daem0n-integration.md  daem0n-learning-loop.md  daem0n-memory-core.md  hermes-integration-map.md  research-academic.md  research-frameworks.md  research-infra.md  research-products.md
dream/: __init__.py  cases.py  consolidate.py  contradict.py  distill.py  facts.py  forget.py  lease.py  mine_state.py  peers.py  probes.py  run.py  shift.py  stats.py  tune.py  weibull.py
observer/: __init__.py  plugin.yaml
recall/: ask.py  blend.py  context.py  embed.py  facts_leg.py  fit_weights.py  fusion.py  graph.py  intent.py  lane1.py  mmr.py  query_cache.py  render.py  rerank.py  search.py  strategies.py
replay/: run.py
skillforge/: __init__.py  forge.py  revise.py  skilltree.py
store/: archive.py  db.py  entities.py  events.py  facts.py  schema.sql  sysinfo.py  vec.py  work_queue.py
store/migrations/: 002_proposals.sql  003_facts_events.sql
sync/: __init__.py  crypto.py  engine.py  relay.py
tests/: conftest.py  test_archive.py  test_ask.py  test_blend.py  test_bootstrap.py  test_brain_setup_aux.py  test_capture.py  test_cli_p2.py  test_context_assembly.py  test_dedup_contest.py  test_dream_cli.py  test_dream_consolidate.py  test_dream_facts.py  test_dream_forget.py  test_dream_mine.py  test_dream_review_fixes.py  test_episode_assembly.py  test_eval_harness.py  test_events.py  test_extract.py  test_facts.py  test_facts_leg.py  test_fit_weights.py  test_graph.py  test_hermes_loader.py  test_hybrid.py  test_injection_join.py  test_intent.py  test_knowledge_update.py  test_lane1.py  test_llm_cost.py  test_mcp_server.py  test_migrations.py  test_mmr.py  test_observer.py  test_p3_review_fixes.py  test_p5_cli.py  test_p5_flywheel_e2e.py  test_p5_learning.py  test_p5_pipeline_e2e.py  (+21 more)
tests/adversarial/: faults.py  test_anti_spam.py  test_ask_scope.py  test_budget_caps.py  test_capability.py  test_concurrency.py  test_harness_sanity.py  test_never_raise.py  test_recovery.py  test_sync_namespace.py  test_trust_scope.py
tests/eval/: __init__.py  harness.py
tests/eval/fixtures/: eval_basic.json
tests/fixtures/: session_basic.json
